--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: > # this means to ignore newlines until "baseurl:"
   This blog is mostly about code, but also about other stuff!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://joshthecoder.com" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
-#github_username:  jekyll
+twitter_username: josh_the_coder
+github_username:  jadarnel27
 
 # Build settings
 markdown: kramdown
